fixed clipping on atc buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,7 +148,7 @@
       display: inline-block;
       background: #ff523b;
       color: white;
-      padding: 8px 30px;
+      padding: 8px 120px;
       margin: 30px 0;
       border-radius: 30px;
       text-decoration: none;
@@ -246,8 +246,10 @@
   
     }
 
-    h1.welcome{
-      margin:auto;
+    .welcome{
+      color: red;
+      margin-left: auto;
+      margin-right: auto;
       padding:10px;
       
     }
